p2/confs/test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app12-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app12
  template:
    metadata:
      labels:
        app: app12
    spec:
      containers:
        - name: app12
          image: ckaserer/hello-kubernetes:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app12-service
spec:
  selector:
    app: app12
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app12-ingress
spec:
  rules:
    - host: app12.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app12-service
                port:
                  number: 80
